Update Division of work